explicacion integral unidimensional

--- a/MiniProyecto.ipynb
+++ b/MiniProyecto.ipynb
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Helecho de barnsley"
+    "## Helecho de Barnsley"
    ]
   },
   {
@@ -548,6 +548,22 @@
    "metadata": {},
    "source": [
     "$$ \\theta=\\int_{-\\infty}^{\\infty}e^{-x^{2}}dx  = \\int_{0}^{1} \\frac{2e^{-(\\frac{1}{x} - 1)^{2}}}{x^{2}} dx $$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para realizar la conversión de integral impropia - con límites $\\infty$ y $-\\infty$ - a una propia - con límites definidos, como 0 y 1 - se comenzó por la premisa que, si una función es simétrica (en otras palabras, si es par) en un intervalo que está centrado en 0, se puede adaptar para que sea impropia únicamente en uno de los límites:\n",
+    "$$\\int_{-\\infty}^{\\infty}f(x)dx = 2\\int_{0}^{\\infty}f(x)dx $$\n",
+    "\n",
+    "La función original es par, ya que se observa que $f(x) = f(-x)$. A partir de esto, también se tiene la conversión a una integral completamente propia:\n",
+    "\n",
+    "$$\\theta=\\int_{-\\infty}^{\\infty}f(x)dx  = \\int_{0}^{\\infty} g(x)dx $$ \n",
+    "$$ h(y) = \\frac{g(\\frac{1}{y} - 1)}{y^{2}} $$ \n",
+    "$$\\theta=\\int_{0}^{1}h(y)dy$$ \n",
+    "\n",
+    "Con estas consideraciones, se obtiene la integral en límites de 0 a 1."
    ]
   },
   {
